Fix T78176: Sequencer renders playhead line twice